--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,9 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  http: ^1.2.2
+  yaml: ^3.1.0
+  path: ^1.8.2
 
 dev_dependencies:
   lints: ^4.0.0
