--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,14 @@
 name: omise_dart
-description: A starting point for Dart libraries or applications.
+description: A Dart SDK that serves as an API wrapper for the Omise API.
+
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/omise/omise-dart
 
 environment:
-  sdk: ^3.5.0
+  sdk: ">=2.19.0 <4.0.0"
 
-# Add regular dependencies here.
 dependencies:
   http: ^1.2.2
-  yaml: ^3.1.0
-  path: ^1.8.2
 
 dev_dependencies:
   lints: ^4.0.0
