--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,21 @@ jobs:
           flutter-version: "3.24.0"
 
       - name: Install dependencies
-        run: dart pub get
+        run: |
+          cd omise-dart
+          dart pub get
 
       - name: Analyze (Check if distributable for Dart)
-        run: dart analyze
+        run: |
+          cd omise-dart
+          dart analyze
 
       - name: Run Tests
-        run: dart test
+        run: |
+          cd omise-dart
+          dart test
 
       - name: Analyze (Check if distributable for Flutter)
-        run: flutter analyze
+        run: |
+          cd example/flutter_example
+          flutter analyze
