--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ jobs:
   build_dart:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -13,20 +16,13 @@ jobs:
           flutter-version: "3.24.0"
 
       - name: Install dependencies
-        run: |
-          ls -R
-          cd omise-dart
-          dart pub get
+        run: dart pub get
 
       - name: Analyze (Check if distributable for Dart)
-        run: |
-          cd omise-dart
-          dart analyze
+        run: dart analyze
 
       - name: Run Tests
-        run: |
-          cd omise-dart
-          dart test
+        run: dart test
 
       - name: Analyze (Check if distributable for Flutter)
         run: |
