--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,3 +10,5 @@ jobs:
     permissions:
       id-token: write # Required for authentication using OIDC
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+    with:
+      sdk: 3.5.0
