--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         # but the dart command does not generate the lcov file.
         run: |
           dart test --coverage=coverage
-          flutter test --coverage > /dev/null 2>&1
+          flutter test --coverage || true
           ls -l coverage/lcov.info
 
       - name: Run analysis (Dart)
