Set project name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=omise_omise_dart
 sonar.organization=omise
-sonar.projectName=Omise Dart
+sonar.projectName=omise_dart
 
 sonar.sources=lib
 sonar.tests=test
